2.79 macOS Gesture Inversion #52984

Closed
opened 2017-10-04 01:11:35 +02:00 by Harley · 11 comments

System Information
macOS 10.12.6

Blender Version
Broken: 2.79 5bd8ac9
Working: 2.78c (all)

Short description of error
When using two fingers to orbit the camera, using this gesture: https://i.imgur.com/Fq6lpuT.gif , the direction is inverted in 2.79.
This is NOT a natural scroll issue; modifying either blender or the system natural scroll setting does not affect this issue.

Exact steps for others to reproduce the error
Using any file (even startup) will produce the issue. Compare to 2.78c for the correct implementation.

**System Information** macOS 10.12.6 **Blender Version** Broken: 2.79 5bd8ac9 Working: 2.78c (all) **Short description of error** When using two fingers to orbit the camera, using this gesture: https://i.imgur.com/Fq6lpuT.gif , the direction is inverted in 2.79. This is NOT a natural scroll issue; modifying either blender or the system natural scroll setting does not affect this issue. **Exact steps for others to reproduce the error** Using any file (even startup) will produce the issue. Compare to 2.78c for the correct implementation.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @thehfd

Added subscriber: @thehfd

Added subscribers: @ArtoKitula, @brecht, @Sergey

Added subscribers: @ArtoKitula, @brecht, @Sergey
Arto Kitula was assigned by Sergey Sharybin 2017-10-04 11:52:48 +02:00

@ArtoKitula, mind having a look here? Or maybe @brecht? :)

@ArtoKitula, mind having a look here? Or maybe @brecht? :)

Confirmed inverted action.

Confirmed inverted action.

@brecht ? Modifying the rotation multiplier to negative in GHOST_SystemCocoa.mm would change the direction (giving [event rotation] * -5.0) to the correct way. Why has it different outcome than before?

@brecht ? Modifying the rotation multiplier to negative in GHOST_SystemCocoa.mm would change the direction (giving [event rotation] * -5.0) to the correct way. Why has it different outcome than before?

I can't immediately spot a related commit, we'll need to run a git bisect to figure out the cause I think.

I can't immediately spot a related commit, we'll need to run a git bisect to figure out the cause I think.

I did check but nobody has touched the .mm files for a quite a while. Getting back to this later...

I did check but nobody has touched the .mm files for a quite a while. Getting back to this later...

I just compiled 2.78c and see the inversion there too, but the official build doesn't have it. Maybe it's related to the minimum or sdk version? Though not sure what the pattern is:

2.78c: ok
  version 10.6
      sdk 10.10

2.79: inverted
  version 10.6
      sdk 10.9

buildbot: inverted
  version 10.9
      sdk 10.12

my 2.78c build: inverted
  version 10.9
      sdk 10.13

I suggest to just flip the sign and not worry about the exact cause.

I just compiled 2.78c and see the inversion there too, but the official build doesn't have it. Maybe it's related to the minimum or sdk version? Though not sure what the pattern is: ``` 2.78c: ok version 10.6 sdk 10.10 2.79: inverted version 10.6 sdk 10.9 buildbot: inverted version 10.9 sdk 10.12 my 2.78c build: inverted version 10.9 sdk 10.13 ``` I suggest to just flip the sign and not worry about the exact cause.

This issue was referenced by 1effab7809

This issue was referenced by 1effab780951ead28c94f4a12ee6ddd04efdcfc1

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52984
No description provided.