Fix T52984. Trackpad rotation to natural direction